# VV-Test

./: pyproject.toml
demo/: vibevoice_tts_gui.py
demo/web/: app.py
